--- a/workforce_challange_client/src/App.css
+++ b/workforce_challange_client/src/App.css
@@ -2,18 +2,24 @@
   text-align: center;
 }
 
+  body{
+    margin: 0;
+    padding: 0;
+  
+  }
+
 .FormStyle {
   position: absolute;
   max-width: 85%;
   max-height: 75%;
   display: block;
+  flex-direction: column;
   justify-content: center;
   background-color: #FFF;
   z-index: 1000;
   padding: 2em;
   border-radius: 10px;
   color: #252629;
-  overflow-y:scroll;
 }
 
 .FormStyle img{
@@ -32,4 +38,117 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.Header {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  background-color: #ed8728;
+  color: white;
+  width: 100%;
+  height: 15rem;
+}
+
+.NavItem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  margin: 0.8rem;
+}
+
+.button2{
+  background-color: transparent;
+  color: white;
+  margin: 0.3rem;
+  border-radius: 5px;
+  border: 1px solid white;
+  padding: 10px;
+}
+
+button:hover{
+border: 1px solid lightslategray;
+color: lightslategray;
+cursor: pointer;
+}
+
+.logo{
+  position:absolute;
+  left: 10px;
+  top: 10px;
+  color:white;
+  font-size: 40px;
+}
+
+.formContainer { 
+ display: flex;
+ justify-content: center;
+ border-style: solid;
+ border-width: 2px;
+ border-color: lightgrey;
+ border-radius: 10px;
+ margin: 5rem;
+ padding: 2rem;
+}
+
+.signIn input {
+  border-radius: 5px;
+  border: 2px solid lightgray;
+  padding: 5px;
+  margin: 5px;
+}
+
+.signIn{
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  text-align: left;
+}
+
+.mainContainer{
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  border: 2px solid lightgray;
+  border-radius: 10px;
+  margin: 10%;
+  padding: 2rem;
+}
+
+.orgList{
+  display: flex;
+  flex-direction: row;
+  background-color: #ed8728;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px;
+  padding: 0.5rem;
+  border-radius: 10px;
+  color: white
+}
+
+.list{
+  text-align: start;
+}
+
+button{
+  background-color: transparent;
+  color: #ed8728;
+  margin: 0.3rem;
+  border-radius: 5px;
+  border: 1px solid #ed8728;
+  padding: 10px;
+}
+
+th,td{
+  border: 1px solid lightgray;
+  padding-left: 0.2rem;
+  padding-right: 0.2rem;
+}
+
+table{
+  border-collapse: collapse;
+  
 }
